--- a/src/js/components/CornerMenu/CornerMenu.module.css
+++ b/src/js/components/CornerMenu/CornerMenu.module.css
@@ -1,32 +1,60 @@
 .corner-menu{
-	width: 100%;
-	background-color: blueviolet;
-}
-
-.trigger-button{
-	width: 100%;
-
 	position: relative;
-	box-sizing: border-box;
-	user-select: none;
-	cursor: pointer;
-	pointer-events: auto;
-	border: solid 20px #dfdfdf;
-
-	border-radius: 50%;
-	background-color: #4a484d;
-	margin-bottom: 0;
-	line-height: 0;
-
+	width: 100%;
 	display: flex;
-	align-items: center;
-	justify-content: center;
-	overflow: hidden;
+	flex-direction: column;
 }
 
-.trigger-button::before {
-	border-radius: 50%;
-	content: "";
-	padding-top: 100%;
-	display: block;
+.from-top{
+	flex-flow: column-reverse;
+}
+
+.from-bottom{
+	flex-flow: column;
+}
+
+.from-top > .button-container {
+	margin-top: 15px;
+}
+
+.from-bottom > .button-container {
+	margin-bottom: 15px;
+}
+
+.button-container{
+	width: 100%;
+	height: 100%;
+	position: relative;
+	display: flex;
+	flex-flow: column;
+	align-content: flex-start;
+	transition: all 0.6s ease-out;
+}
+
+.button-container > *{
+	display: inline-block;
+	transform: none;
+	transition: all 0.6s ease-out;
+}
+
+.from-top > .closed-menu{
+	margin-top: 0;
+}
+
+.from-bottom > .closed-menu{
+	margin-bottom: 0;
+}
+
+.closed-menu > * {
+	transform: scale(0.7);
+	font-size: 0;
+	padding: 0;
+}
+
+.from-top > .closed-menu > *{
+	margin-top: -100%;
+}
+
+.from-bottom > .closed-menu > *{
+	margin-bottom: -100%;
 }
