--- a/src/js/components/RoundButton/RoundButton.module.css
+++ b/src/js/components/RoundButton/RoundButton.module.css
@@ -13,9 +13,10 @@
 }
 
 .round-button > label{
+	background-color: brown;
 	margin-top: 0.3em;
 	color: #dfdfdf;
-	max-width: 150%;
+	max-width: 200%;
 	text-align: center;
 	display: block;
 	user-select: none;
